[workspace]
members = [
    "zzyl-admin",
    "zzyl-common",
    "zzyl-framework", 
    "zzyl-system",
    "zzyl-quartz",
    "zzyl-generator",
    "zzyl-nursing-platform",
    "zzyl-oss"
]
resolver = "2"

[workspace.package]
version = "3.8.8"
edition = "2021"
authors = ["ZZYL Team"]
license = "MIT"
description = "中州养老 - Nursing Home Management System in Rust"

[workspace.dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "json"] }
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-mysql", "macros", "debug-print"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
jsonwebtoken = "9.0"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# File handling
mime_guess = "2.0"
tempfile = "3.0"

# Excel/CSV handling
calamine = "0.24"
csv = "1.0"

# Template engine
handlebars = "4.0"

# System monitoring
sysinfo = "0.30"

# AI/ML
openai = "0.25"

# Async runtime
futures = "0.3"

