[package]
name = "zzyl-nursing-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Nursing platform business logic for ZZYL"

[dependencies]
# Workspace dependencies
zzyl-common = { path = "../zzyl-common" }
zzyl-framework = { path = "../zzyl-framework" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

# Additional dependencies
rust_decimal = "1.0"

